2008-07-03	Nick Schermer <nick@xfce.org>

	* dialogs/appearance-dialog/main.c: Only add the icon theme
	  to the check list when it's actually added to the store.
	  Revert strcmp to g_utf8_collate. Strip trailing spaces.
	  
	  Both fixes where mentioned by Jannis, thanks for that.

2008-07-03	Nick Schermer <nick@xfce.org>

	* dialogs/appearance-dialog/main.c: Use a similar function
	  for loading ui themes as icon themes. Add a list in both
	  theme load functions to avoid dupplicates. Read extra ui
	  theme information from the index.theme file if available.
	  Store the theme name (folder name) and display name separatly
	  in the store, authors can define another theme name in the
	  index.theme file which will result in settings a theme
	  that is not recognized by Gtk. Use hicolor as default icon
	  theme name. Fix the icon theme directory that was pushed
	  (its $datadir/icons, not $datadir/xfce4/icons).

2008-07-03	Nick Schermer <nick@xfce.org>

	* dialogs/appearance-dialog/main.c: Fix indentation of Jannis'
	  code to match the rest. Add Icon theme comments in the list
	  for Gtk 2.12. Make some strings static and merge the
	  selection_changed functions into one. Plug some leaks.

2008-07-02	Jannis Pohlmann <jannis@xfce.org>

	* dialogs/appearance-dialog/main.c: Sort user interface and
	  icon themes. Use the only column (0) for searching.

2008-07-02	Jannis Pohlmann <jannis@xfce.org>

	* dialogs/appearance-dialog/main.c: Load icon themes properly.
	  I used some of the code from the old mcs ui plugin.
	* AUTHORS: I took the liberty to add my name here. 

2008-07-01	Nick Schermer <nick@xfce.org>

	* dialogs/accessibility-settings/accessibility-dialog.glade,
	  dialogs/mouse-settings/mouse-dialog.glade,
	  dialogs/appearance-settings/appearance-dialog.glade,
	  dialogs/keyboard-settings/keyboard-dialog.glade: Make labels next
	  to the sliders small italic, like in Xfwm4; Make mnemonic widgets