@@ -1,3 +1,8 @@
+2008-07-04	Nick Schermer <nick@xfce.org>
+
+	* dialogs/mouse-settings/main.c: Bring support for the
+	  default icon theme back.
+
 2008-07-03	Nick Schermer <nick@xfce.org>
 
 	* dialogs/appearance-dialog/main.c: Only add the icon theme
